Fixed mentors not showing
Thanks Gustav!

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -178,6 +178,6 @@ table[data-toggle=table]{
 
 // Training page css
 .report-overflow-scroll{
-	height: 560px;
+	height: 646px;
 	overflow-y: scroll;
 }
